[new] login api and loading gif image added

--- a/index.html
+++ b/index.html
@@ -52,6 +52,10 @@
     <!-- User Interface -->
     <ui-view></ui-view>
 
+    <script type="text/javascript">
+        window.domainURL="http://localhost/zdoapp/public/api/";
+    </script>
+
     <!-- Bootstrap and necessary plugins -->
     <script src="bower_components/jquery/dist/jquery.min.js"></script>
     <script src="bower_components/tether/dist/js/tether.min.js"></script>
@@ -69,11 +73,10 @@
     <!-- AngularJS CoreUI App scripts -->
 
     <script src="js/app.js"></script>
-
     <script src="js/routes.js"></script>
-
     <script src="js/controllers.js"></script>
     <script src="js/directives.js"></script>
+    <script src="js/services.js"></script>
 
 </body>
 
