--- a/index.html
+++ b/index.html
@@ -1,10 +1,3 @@
-<!--
- * CoreUI - Open Source Bootstrap Admin Template
- * @version v1.0.0-alpha.6
- * @link http://coreui.io
- * Copyright (c) 2017 creativeLabs Łukasz Holeczek
- * @license MIT
- -->
 <!DOCTYPE html>
 <html lang="en" ng-app="app">
 
@@ -13,12 +6,9 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="CoreUI - Open Source Bootstrap Admin Template">
-    <meta name="author" content="Łukasz Holeczek">
-    <meta name="keyword" content="Bootstrap,Admin,Template,Open,Source,AngularJS,Angular,Angular2,Angular 2,Angular4,Angular 4,jQuery,CSS,HTML,RWD,Dashboard,React,React.js,Vue,Vue.js">
-    <link rel="shortcut icon" href="img/favicon.png">
+    <!--<link rel="shortcut icon" href="img/favicon.png">-->
 
-    <title>CoreUI - Open Source Bootstrap Admin Template</title>
+    <title>ZeroDotOne</title>
 
     <!-- Main styles for this application -->
     <link href="css/style.css" rel="stylesheet">
@@ -26,6 +16,7 @@
     <link href="css/dataTables.jqueryui.min.css" rel="stylesheet" />
     <link href="css/dataTables.bootstrap.min.css" rel="stylesheet" />
     <link href="css/angular-datatables.css" rel="stylesheet">
+    <link href="css/jquery-confirm.min.css" rel="stylesheet" />
     <!--<link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap-glyphicons.css" rel="stylesheet">-->
 
 </head>
@@ -78,6 +69,7 @@
     <script src="bower_components/angular-loading-bar/build/loading-bar.min.js"></script>
 
     <script src="js/angular-datatables.min.js"></script>
+    <script src="js/jquery-confirm.min.js"></script>
 
     <!-- AngularJS CoreUI App scripts -->
 
