--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <link href="css/dataTables.bootstrap.min.css" rel="stylesheet" />
     <link href="css/angular-datatables.css" rel="stylesheet">
     <link href="css/jquery-confirm.min.css" rel="stylesheet" />
+    <link href="bower_components/angularjs-datepicker/dist/angular-datepicker.min.css" rel="stylesheet" />
     <!--<link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap-glyphicons.css" rel="stylesheet">-->
 
 </head>
@@ -62,6 +63,8 @@
     <!-- AngularJS -->
     <script src="bower_components/angular/angular.min.js"></script>
 
+    <script src="https://sdk.amazonaws.com/js/aws-sdk-2.65.0.min.js"></script>
+
     <!-- AngularJS plugins -->
     <script src="bower_components/angular-ui-router/release/angular-ui-router.min.js"></script>
     <script src="bower_components/oclazyload/dist/ocLazyLoad.min.js"></script>
@@ -71,6 +74,8 @@
     <script src="js/angular-datatables.min.js"></script>
     <script src="js/jquery-confirm.min.js"></script>
 
+    <script src="bower_components/angularjs-datepicker/dist/angular-datepicker.min.js"></script>
+
     <!-- AngularJS CoreUI App scripts -->
 
     <script src="js/app.js"></script>
@@ -78,6 +83,7 @@
     <script src="js/controllers.js"></script>
     <script src="js/directives.js"></script>
     <script src="js/services.js"></script>
+    <script src="js/upload.service.js"></script>
 
 </body>
 
