[update] admin and agent edit application work

--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
     <ui-view></ui-view>
 
     <script type="text/javascript">
-        //window.domainURL = "http://localhost/zdoapp/public/api/";
-        window.domainURL = "http://zdoapp.mycartechnologies.com/public/api/";
+        window.domainURL = "http://localhost/zdoapp/public/api/";
+        //window.domainURL = "http://zdoapp.mycartechnologies.com/public/api/";
     </script>
 
     <!-- Bootstrap and necessary plugins -->
